samples/_failures_safe/1761416595_819190_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3bfd09c7.c: In function ‘read_string’:
./samples/SAFE/__tmp_3bfd09c7.c:158:24: error: expected ‘;’ at end of input
  158 |     token->line = lexer
      |                        ^
      |                        ;
./samples/SAFE/__tmp_3bfd09c7.c:158:5: error: expected declaration or statement at end of input
  158 |     token->line = lexer
      |     ^~~~~
